# Android_Kviz

./: .gitignore  README.md
Android/: .gitignore
Android/Takmicar/: AndroidManifest.xml  project.properties
Android/Takmicar/res/layout/: activity_main.xml
Android/Takmicar/res/values/: strings.xml
Android/Takmicar/src/net/ddns/zivlakmilos/androidkviz/takmicar/: MainActivity.java
Service/: .gitignore  CMakeLists.txt  Service.pro  main.cpp
Service/database/: create_tables.sql
Service/include/: AdministrationWindow.h  DAndroidProjector.h  DAsocijacije.h  DAsocijacijeEdit.h  DBrziPrsti.h  DBrziPrstiEdit.h  DKoZnaZna.h  DKoZnaZnaEdit.h  DPitanje.h  DQuizSelector.h  DVideoBim.h  Database.h  MainWindow.h  TcpClient.h  TcpService.h  WAsocijacijePreview.h  WBrziPrsti.h  WQuizControl.h  WRekordi.h
Service/include/data/: MAsocijacije.h  MBrziPrsti.h  MKoZnaZna.h  MRekordi.h  asocijacije.h  brziprsti.h  koznazna.h  kviz.h  takmicar.h
Service/resources/: resources.qrc
Service/src/: AdministrationWindow.cpp  DAndroidProjector.cpp  DAsocijacije.cpp  DAsocijacijeEdit.cpp  DBrziPrsti.cpp  DBrziPrstiEdit.cpp  DKoZnaZna.cpp  DKoZnaZnaEdit.cpp  DQuizSelector.cpp  DVideoBim.cpp  Database.cpp  MainWindow.cpp  TcpClient.cpp  TcpService.cpp  WAsocijacijePreview.cpp  WBrziPrsti.cpp  WQuizControl.cpp  WRekordi.cpp
Service/src/data/: MAsocijacije.cpp  MBrziPrsti.cpp  MKoZnaZna.cpp  MRekordi.cpp
Service/test/: CMakeLists.txt  DatabaseTest.cpp  main.cpp
android/Kviz/: build.xml  local.properties
android/Kviz/res/layout/: main.xml  type1.xml
android/Kviz/res/values/: strings.xml
android/Kviz/src/krajisnik/zivlak/kviz/: MainActivity.java  Network.java  NetworkListener.java  Type1.java
pc/ChatServer/nbproject/private/: private.properties  private.xml
pc/ChatServer/src/chatserver/: ChatServer.java  Client.java
pc/Kviz/: build.xml
pc/Kviz/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list
pc/Kviz/doc/krajisnik/zivlak/kviz/: Client.html  Database.html  Network.html  Question.html  Quiz.html  Register.html  package-frame.html  package-summary.html  package-tree.html
pc/Kviz/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
pc/Kviz/nbproject/private/: private.properties  private.xml
pc/Kviz/src/krajisnik/zivlak/kviz/: Client.java  Database.java  Network.java  Question.java  Quiz.java  Register.java
